# asteroid

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
doc/: documentation_memoire_asteroid_lightcurve.md
src/asteroid_lightcurve/: __init__.py  cli.py  ephemeris.py  models.py  parser.py  period.py  plotting.py
tests/: test_pravec_geometry.py
