[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroid-lightcurve"
version = "0.1.0"
description = "Analyse de courbes de lumiere CCD d'asteroides"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.scripts]
asteroid-lc = "asteroid_lightcurve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
